--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
                                             <ul id="navigation">
                                                 <li><a href="index.html">Home</a></li>
                                                 <li><a href="about.html">About</a></li>
-                                                <li><a href="menu.html">Menu</a></li>
                                                 <li><a href="contact.html">Contact</a></li>
                                             </ul>
                                         </nav>
@@ -497,57 +496,7 @@
             </div>
         </div>
         <!-- About-2 Area End -->
-        <!--? Blog Area Start -->
-        <section class="blogs-area section-padding30">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6">
-                        <!-- Section Tittle -->
-                        <div class="section-tittle text-center mb-70">
-                            <span>Our New Blog News</span>
-                            <h2>Our Recnet News</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="single-blogs mb-100">
-                            <div class="blog-img">
-                                <img src="assets/img/gallery/blog1.png" alt="">
-                            </div>
-                            <div class="blog-cap">
-                                <span class="color1">23 Dec, 2020</span>
-                                <h4><a href="blog_details.html">Addiction When Food Plate Becomes</a></h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="single-blogs mb-100">
-                            <div class="blog-img">
-                                <img src="assets/img/gallery/blog2.png" alt="">
-                            </div>
-                            <div class="blog-cap">
-                                <span class="color1">23 Dec, 2020</span>
-                                <h4><a href="blog_details.html">Addiction When Food Plate Becomes</a></h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="single-blogs mb-100">
-                            <div class="blog-img">
-                                <img src="assets/img/gallery/blog3.png" alt="">
-                            </div>
-                            <div class="blog-cap">
-                                <span class="color1">23 Dec, 2020</span>
-                                <h4><a href="blog_details.html">Addiction When Food Plate Becomes</a></h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Blog Area End -->
-    </main>
+</main>
     <footer>
         <!--? Footer Start-->
         <div class="footer-area section-bg" data-background="assets/img/gallery/section_bg02.png">
@@ -568,9 +517,7 @@
                                     <h4>Navigation</h4>
                                     <ul>
                                         <li><a href="#">Home</a></li>
-                                        <li><a href="#">Events</a></li>
-                                        <li><a href="#">Testimonial</a></li>
-                                        <li><a href="#">Categories</a></li>
+                                        <li><a href="#">About</a></li>
                                         <li><a href="#">Contacts</a></li>
                                     </ul>
                                 </div>
@@ -579,12 +526,9 @@
                         <div class="col-xl-2 col-lg-2 col-md-5 col-sm-6">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Useful Links</h4>
+                                    <h4>Social Media</h4>
                                     <ul>
-                                        <li><a href="#">Registration</a></li>
-                                        <li><a href="#">Login</a></li>
-                                        <li><a href="#">Policy</a></li>
-                                        <li><a href="#">Terms & Conditions</a></li>
+                                        <li><a href="https://www.instagram.com/temanlauk_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -600,10 +544,7 @@
                                         <li><a href="#"><img src="assets/img/gallery/instagram1.png" alt=""></a></li>
                                         <li><a href="#"><img src="assets/img/gallery/instagram2.png" alt=""></a></li>
                                         <li><a href="#"><img src="assets/img/gallery/instagram3.png" alt=""></a></li>
-                                        <li><a href="#"><img src="assets/img/gallery/instagram4.png" alt=""></a></li>
-                                        <li><a href="#"><img src="assets/img/gallery/instagram5.png" alt=""></a></li>
-                                        <li><a href="#"><img src="assets/img/gallery/instagram6.png" alt=""></a></li>
-                                    </ul>
+                                       </ul>
                                 </div>
                             </div>
                         </div>
