--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                                         <nav> 
                                             <ul id="navigation">
                                                 <li><a href="index.html">Home</a></li>
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="contact.html">Contact</a></li>
+                                                <li><a href="about.html">Tentang</a></li>
+                                                <li><a href="contact.html">Kontak</a></li>
                                             </ul>
                                         </nav>
                                     </div>
                                     <div class="header-right-btn f-right d-none d-lg-block ml-20">
-                                        <a href="https://wa.me/085216063116" class="border-btn header-btn">Order Online</a>
+                                        <a href="https://wa.me/085216063116" class="border-btn header-btn">Order Sekarang</a>
                                     </div>
                                 </div>
                             </div>   
@@ -514,11 +514,11 @@
                         <div class="col-xl-2 col-lg-2 col-md-5 col-sm-6">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Navigation</h4>
+                                    <h4>Navigasi</h4>
                                     <ul>
                                         <li><a href="#">Home</a></li>
-                                        <li><a href="#">About</a></li>
-                                        <li><a href="#">Contacts</a></li>
+                                        <li><a href="#">Tentang</a></li>
+                                        <li><a href="#">Kontak</a></li>
                                     </ul>
                                 </div>
                             </div>
