--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Restaurant | Template </title>
+    <title> Tentang Teman Lauk </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -55,21 +55,13 @@
                                         <nav> 
                                             <ul id="navigation">
                                                 <li><a href="index.html">Home</a></li>
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="menu.html">Menu</a></li>
-                                                <li><a href="blog.html">Blog</a>
-                                                    <ul class="submenu">
-                                                        <li><a href="blog.html">Blog</a></li>
-                                                        <li><a href="blog_details.html">Blog Details</a></li>
-                                                        <li><a href="elements.html">Element</a></li>
-                                                    </ul>
-                                                </li>
+                                                <li><a href="about.html">Tentang</a></li>
                                                 <li><a href="contact.html">Contact</a></li>
                                             </ul>
                                         </nav>
                                     </div>
                                     <div class="header-right-btn f-right d-none d-lg-block ml-20">
-                                        <a href="contact.html" class="border-btn header-btn">Order Online</a>
+                                        <a href="contact.html" class="border-btn header-btn">Order Sekarang</a>
                                     </div>
                                 </div>
                             </div>   
@@ -91,7 +83,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap hero-cap2">
-                                <h2>About US</h2>
+                                <h2>Tentang Kita</h2>
                             </div>
                         </div>
                     </div>
@@ -113,13 +105,13 @@
                         <div class="about-caption mb-50">
                             <!-- Section Tittle -->
                             <div class="section-tittle mb-35">
-                                <span>About Our Restaurant</span>
-                                <h2>We Provide Good Food  For Your Family!</h2>
+                                <span>Tentang Teman Lauk</span>
+                                <h2>Menyuguhkan Teman nasi atau cemilan untuk anda!</h2>
                             </div>
                             <p class="pera-top">Ut enim acgsd minim veniam, quxcis nostrud exercitation ullamco laboris nisi ufsit aliquip ex ea commodo consequat is aute irure m, quis nostrud exer</p>
 
                             <p  class="mb-65 pera-bottom">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected our, or randomised words which don't look even slightly believab If you are going to use a passage.</p>
-                            <a href="about.html" class="border-btn">Learn More</a>
+                            
                         </div>
                     </div>
                 </div>
@@ -143,11 +135,11 @@
                         <div class="col-xl-2 col-lg-2 col-md-5 col-sm-6">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Navigation</h4>
+                                    <h4>Navigasi</h4>
                                     <ul>
                                         <li><a href="#">Home</a></li>
-                                        <li><a href="#">Events</a></li>
-                                        <li><a href="#">Testimonial</a></li>
+                                        <li><a href="#">Tentang</a></li>
+                                        <li><a href="#">kontak</a></li>
                                         </ul>
                                 </div>
                             </div>
@@ -155,13 +147,10 @@
                         <div class="col-xl-2 col-lg-2 col-md-5 col-sm-6">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Useful Links</h4>
+                                    <h4>Sosial Media</h4>
                                     <ul>
-                                        <li><a href="#">Registration</a></li>
-                                        <li><a href="#">Login</a></li>
-                                        <li><a href="#">Policy</a></li>
-                                        <li><a href="#">Terms & Conditions</a></li>
-                                    </ul>
+                                        <li><a href="#">Instagram</a></li>
+                                        </ul>
                                 </div>
                             </div>
                         </div>
@@ -176,10 +165,7 @@
                                         <li><a href="#"><img src="assets/img/gallery/instagram1.png" alt=""></a></li>
                                         <li><a href="#"><img src="assets/img/gallery/instagram2.png" alt=""></a></li>
                                         <li><a href="#"><img src="assets/img/gallery/instagram3.png" alt=""></a></li>
-                                        <li><a href="#"><img src="assets/img/gallery/instagram4.png" alt=""></a></li>
-                                        <li><a href="#"><img src="assets/img/gallery/instagram5.png" alt=""></a></li>
-                                        <li><a href="#"><img src="assets/img/gallery/instagram6.png" alt=""></a></li>
-                                    </ul>
+                                       </ul>
                                 </div>
                             </div>
                         </div>
