--- a/index.html
+++ b/index.html
@@ -130,7 +130,46 @@
                             </div>
                             <p>Ut enim acgsd minim veniam, quxcis nostrud exercitation ullamco laboris nisi ufsit aliquip ex ea commodo consequat is aute irure m, quis nostrud exer.</p>
                         </div>
-                        
+                         <div class="row">Add commentMore actions
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-10">
+                                <div class="single-caption mb-20">
+                                    <div class="caption-icon">
+                                        <span class="flaticon-restaurant"></span>
+                                    </div>
+                                    <div class="caption">
+                                        <p>Ut enim ad minim veniam, quis nostrud exer.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-10">
+                                <div class="single-caption mb-20">
+                                    <div class="caption-icon">
+                                        <span class="flaticon-tools-and-utensils-1"></span>
+                                    </div>
+                                    <div class="caption">
+                                        <p>Ut enim ad minim veniam, quis nostrud exer.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-10">
+                                <div class="single-caption mb-20">
+                                    <div class="caption-icon">
+                                        <span class="flaticon-hat"></span>
+                                    </div>
+                                    <div class="caption">
+                                        <p>Ut enim ad minim veniam, quis nostrud exer.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-10">
+                                <div class="single-caption mb-20">Add commentMore actions
+                                    <div class="caption-icon">
+                                        <span class="flaticon-restaurant"></span>
+                                    </div>
+                                    <div class="caption">
+                                        <p>Ut enim ad minim veniam, quis nostrud exer.</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
