--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                         </nav>
                                     </div>
                                     <div class="header-right-btn f-right d-none d-lg-block ml-20">
-                                        <a href="https://wa.me/081288416906" class="border-btn header-btn">Order Sekarang</a>
+                                        <a href="https://wa.me/qr/7F5RVUSHBGX7N1" class="border-btn header-btn">Order Sekarang</a>
                                     </div>
                                 </div>
                             </div>   
@@ -107,7 +107,7 @@
                                     <p data-animation="fadeInLeft" data-delay=".6s">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat is aute irure.</p>
                                     <!-- Hero-btn -->
                                     <div class="hero__btn">
-                                        <a href="https://wa.me/081288416906" class="btn hero-btn"  data-animation="fadeInLeft" data-delay=".8s">Pesan Sekarang</a>
+                                        <a href="https://wa.me/qr/7F5RVUSHBGX7N1" class="btn hero-btn"  data-animation="fadeInLeft" data-delay=".8s">Pesan Sekarang</a>
                                     </div>
                                 </div>
                             </div>
