--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                     <p data-animation="fadeInLeft" data-delay=".6s">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat is aute irure.</p>
                                     <!-- Hero-btn -->
                                     <div class="hero__btn">
-                                        <a href="https://wa.me/qr/7F5RVUSHBGX7N1" class="btn hero-btn"  data-animation="fadeInLeft" data-delay=".8s">Pesan Sekarang</a>
+                                        <a href="https://wa.me/6281288416906" class="btn hero-btn"  data-animation="fadeInLeft" data-delay=".8s">Pesan Sekarang</a>
                                     </div>
                                 </div>
                             </div>
@@ -164,7 +164,7 @@
                                             <span>Rp.150.000</span>
                                             <h4>Kemasan Thinwall 500gr</h4>
                                             <p>Cocok untuk bersama keluarga.</p>
-                                            <a href="https://wa.me/081288416906" class="btn order-btn">Order Now</a>
+                                            <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -177,7 +177,7 @@
                                             <span>Rp.75.000</span>
                                             <h4>Kemasan Thinwall 250gr</h4>
                                             <p>Ut enim ad minim veniam quis nostr.</p>
-                                            <a href="https://wa.me/081288416906" class="btn order-btn">Order Now</a>
+                                            <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -192,7 +192,7 @@
                                                     <span>$25</span>
                                                     <h4>Delicious Food</h4>
                                                     <p>Ut enim ad minim veniam quis nostr.</p>
-                                                    <a href="#" class="btn order-btn">Order Now</a>
+                                                    <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -205,7 +205,7 @@
                                                     <span>$25</span>
                                                     <h4>Delicious Food</h4>
                                                     <p>Ut enim ad minim veniam quis nostr.</p>
-                                                    <a href="#" class="btn order-btn">Order Now</a>
+                                                    <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -225,7 +225,7 @@
                                             <span>$25</span>
                                             <h4>Delicious Food</h4>
                                             <p>Ut enim ad minim veniam quis nostr.</p>
-                                            <a href="#" class="btn order-btn">Order Now</a>
+                                            <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -238,7 +238,7 @@
                                             <span>$25</span>
                                             <h4>Delicious Food</h4>
                                             <p>Ut enim ad minim veniam quis nostr.</p>
-                                            <a href="#" class="btn order-btn">Order Now</a>
+                                            <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -253,7 +253,7 @@
                                                     <span>$25</span>
                                                     <h4>Delicious Food</h4>
                                                     <p>Ut enim ad minim veniam quis nostr.</p>
-                                                    <a href="#" class="btn order-btn">Order Now</a>
+                                                    <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -266,7 +266,7 @@
                                                     <span>$25</span>
                                                     <h4>Delicious Food</h4>
                                                     <p>Ut enim ad minim veniam quis nostr.</p>
-                                                    <a href="#" class="btn order-btn">Order Now</a>
+                                                    <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -286,7 +286,7 @@
                                             <span>$25</span>
                                             <h4>Delicious Food</h4>
                                             <p>Ut enim ad minim veniam quis nostr.</p>
-                                            <a href="#" class="btn order-btn">Order Now</a>
+                                            <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -299,7 +299,7 @@
                                             <span>$25</span>
                                             <h4>Delicious Food</h4>
                                             <p>Ut enim ad minim veniam quis nostr.</p>
-                                            <a href="#" class="btn order-btn">Order Now</a>
+                                            <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -314,7 +314,7 @@
                                                     <span>$25</span>
                                                     <h4>Delicious Food</h4>
                                                     <p>Ut enim ad minim veniam quis nostr.</p>
-                                                    <a href="#" class="btn order-btn">Order Now</a>
+                                                    <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -327,7 +327,7 @@
                                                     <span>$25</span>
                                                     <h4>Delicious Food</h4>
                                                     <p>Ut enim ad minim veniam quis nostr.</p>
-                                                    <a href="#" class="btn order-btn">Order Now</a>
+                                                    <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -347,7 +347,7 @@
                                             <span>$25</span>
                                             <h4>Delicious Food</h4>
                                             <p>Ut enim ad minim veniam quis nostr.</p>
-                                            <a href="#" class="btn order-btn">Order Now</a>
+                                            <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -360,7 +360,7 @@
                                             <span>$25</span>
                                             <h4>Delicious Food</h4>
                                             <p>Ut enim ad minim veniam quis nostr.</p>
-                                            <a href="#" class="btn order-btn">Order Now</a>
+                                            <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -375,7 +375,7 @@
                                                     <span>$25</span>
                                                     <h4>Delicious Food</h4>
                                                     <p>Ut enim ad minim veniam quis nostr.</p>
-                                                    <a href="#" class="btn order-btn">Order Now</a>
+                                                    <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -388,7 +388,7 @@
                                                     <span>$25</span>
                                                     <h4>Delicious Food</h4>
                                                     <p>Ut enim ad minim veniam quis nostr.</p>
-                                                    <a href="#" class="btn order-btn">Order Now</a>
+                                                    <a href="https://wa.me/6281288416906" class="btn order-btn">Order Now</a>
                                                 </div>
                                             </div>
                                         </div>
