--- a/index.html
+++ b/index.html
@@ -420,9 +420,16 @@
                                 <span>Tentang Teman Lauk</span>
                                 <h2>Teman lauk adalah sebuah bisnis yang menjual makanan </h2>
                             </div>
-                            <p class="pera-top">Ut enim acgsd minim veniam, quxcis nostrud exercitation ullamco laboris nisi ufsit aliquip ex ea commodo consequat is aute irure m, quis nostrud exer</p>
+                            <p class="pera-top">Menjadi seorang working mom membuat saya sempat harus berhenti berwirausaha, pekerjaan kantor yang hectic dan kesibukan rumah tangga, membuat saya terpaksa mengesampingkan hobi yang sudah saya jalankan sejak lama. Tapi rasa cinta saya pada dunia usaha tak pernah padam.
+			    </p>
 
-                            <p  class="mb-65 pera-bottom">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected our, or randomised words which don't look even slightly believab If you are going to use a passage.</p>
+                            <p  class="mb-65 pera-bottom">Kini, saya kembali bersama Teman Lauk. Kenapa Teman Lauk?
+				Karena saya ingin menciptakan camilan sederhana yang ramah dan nyaman untuk semua orang. Bisa menemani disetiap momen seperti: kumpul keluarga, bekal sekolah anak, teman ngobrol sore, bahkan saat nonton film favorit.
+			    </p>
+
+
+			    <p  class="mb-65 pera-bottom">Kentang mustofa renyah dan kaya rasa yang dibuat dengan hati, berawal dari dapur rumah sendiri. Dengan kentang Dieng premium yang di iris tipis manual satu per satu, bumbu bumbu organik dan rempah rempah yang aromatik, saya pastikan setiap kemasan memiliki kualitas terbaik.
+			    </p>
                             <!-- <a href="about.html" class="border-btn">Learn More</a>-->
                         </div>
                     </div>
