--- a/index.html
+++ b/index.html
@@ -418,17 +418,16 @@
                             <!-- Section Tittle -->
                             <div class="section-tittle mb-35">
                                 <span>Tentang Teman Lauk</span>
-                                <h2>Teman lauk adalah sebuah bisnis yang menjual makanan </h2>
+                                <h2>Cerita Kecil dari Dapur, Untuk Semua Momen Besarmu</h2>
                             </div>
                             <p class="pera-top">Menjadi seorang working mom membuat saya sempat harus berhenti berwirausaha, pekerjaan kantor yang hectic dan kesibukan rumah tangga, membuat saya terpaksa mengesampingkan hobi yang sudah saya jalankan sejak lama. Tapi rasa cinta saya pada dunia usaha tak pernah padam.
 			    </p>
 
-                            <p  class="mb-65 pera-bottom">Kini, saya kembali bersama Teman Lauk. Kenapa Teman Lauk?
+                            <p  class="pera-top">Kini, saya kembali bersama Teman Lauk. Kenapa Teman Lauk?
 				Karena saya ingin menciptakan camilan sederhana yang ramah dan nyaman untuk semua orang. Bisa menemani disetiap momen seperti: kumpul keluarga, bekal sekolah anak, teman ngobrol sore, bahkan saat nonton film favorit.
 			    </p>
 
-
-			    <p  class="mb-65 pera-bottom">Kentang mustofa renyah dan kaya rasa yang dibuat dengan hati, berawal dari dapur rumah sendiri. Dengan kentang Dieng premium yang di iris tipis manual satu per satu, bumbu bumbu organik dan rempah rempah yang aromatik, saya pastikan setiap kemasan memiliki kualitas terbaik.
+			    <p  class="pera-top">Kentang mustofa renyah dan kaya rasa yang dibuat dengan hati, berawal dari dapur rumah sendiri. Dengan kentang Dieng premium yang di iris tipis manual satu per satu, bumbu bumbu organik dan rempah rempah yang aromatik, saya pastikan setiap kemasan memiliki kualitas terbaik.
 			    </p>
                             <!-- <a href="about.html" class="border-btn">Learn More</a>-->
                         </div>
